k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testweb
  namespace: testweb
  labels:
    app: testweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testweb
  template:
    metadata:
      labels:
        app: testweb
    spec:
      containers:
      - name: testweb
        image: ghcr.io/hyjk826/testweb-dev:v1.1
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
