k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: testweb-service
  namespace: testweb
  labels:
    app: testweb
spec:
  selector:
    app: testweb
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31686
  type: NodePort
